--- a/.gitignore
+++ b/.gitignore
@@ -1,119 +1,131 @@
-node_modules/.package-lock.json
-node_modules/.bin/tsc
-node_modules/.bin/tsserver
-node_modules/typescript/LICENSE.txt
-node_modules/typescript/package.json
-node_modules/typescript/README.md
-node_modules/typescript/SECURITY.md
-node_modules/typescript/ThirdPartyNoticeText.txt
-node_modules/typescript/bin/tsc
-node_modules/typescript/bin/tsserver
-node_modules/typescript/lib/cancellationToken.js
-node_modules/typescript/lib/lib.d.ts
-node_modules/typescript/lib/lib.decorators.d.ts
-node_modules/typescript/lib/lib.decorators.legacy.d.ts
-node_modules/typescript/lib/lib.dom.asynciterable.d.ts
-node_modules/typescript/lib/lib.dom.d.ts
-node_modules/typescript/lib/lib.dom.iterable.d.ts
-node_modules/typescript/lib/lib.es5.d.ts
-node_modules/typescript/lib/lib.es6.d.ts
-node_modules/typescript/lib/lib.es2015.collection.d.ts
-node_modules/typescript/lib/lib.es2015.core.d.ts
-node_modules/typescript/lib/lib.es2015.d.ts
-node_modules/typescript/lib/lib.es2015.generator.d.ts
-node_modules/typescript/lib/lib.es2015.iterable.d.ts
-node_modules/typescript/lib/lib.es2015.promise.d.ts
-node_modules/typescript/lib/lib.es2015.proxy.d.ts
-node_modules/typescript/lib/lib.es2015.reflect.d.ts
-node_modules/typescript/lib/lib.es2015.symbol.d.ts
-node_modules/typescript/lib/lib.es2015.symbol.wellknown.d.ts
-node_modules/typescript/lib/lib.es2016.array.include.d.ts
-node_modules/typescript/lib/lib.es2016.d.ts
-node_modules/typescript/lib/lib.es2016.full.d.ts
-node_modules/typescript/lib/lib.es2016.intl.d.ts
-node_modules/typescript/lib/lib.es2017.d.ts
-node_modules/typescript/lib/lib.es2017.date.d.ts
-node_modules/typescript/lib/lib.es2017.full.d.ts
-node_modules/typescript/lib/lib.es2017.intl.d.ts
-node_modules/typescript/lib/lib.es2017.object.d.ts
-node_modules/typescript/lib/lib.es2017.sharedmemory.d.ts
-node_modules/typescript/lib/lib.es2017.string.d.ts
-node_modules/typescript/lib/lib.es2017.typedarrays.d.ts
-node_modules/typescript/lib/lib.es2018.asyncgenerator.d.ts
-node_modules/typescript/lib/lib.es2018.asynciterable.d.ts
-node_modules/typescript/lib/lib.es2018.d.ts
-node_modules/typescript/lib/lib.es2018.full.d.ts
-node_modules/typescript/lib/lib.es2018.intl.d.ts
-node_modules/typescript/lib/lib.es2018.promise.d.ts
-node_modules/typescript/lib/lib.es2018.regexp.d.ts
-node_modules/typescript/lib/lib.es2019.array.d.ts
-node_modules/typescript/lib/lib.es2019.d.ts
-node_modules/typescript/lib/lib.es2019.full.d.ts
-node_modules/typescript/lib/lib.es2019.intl.d.ts
-node_modules/typescript/lib/lib.es2019.object.d.ts
-node_modules/typescript/lib/lib.es2019.string.d.ts
-node_modules/typescript/lib/lib.es2019.symbol.d.ts
-node_modules/typescript/lib/lib.es2020.bigint.d.ts
-node_modules/typescript/lib/lib.es2020.d.ts
-node_modules/typescript/lib/lib.es2020.date.d.ts
-node_modules/typescript/lib/lib.es2020.full.d.ts
-node_modules/typescript/lib/lib.es2020.intl.d.ts
-node_modules/typescript/lib/lib.es2020.number.d.ts
-node_modules/typescript/lib/lib.es2020.promise.d.ts
-node_modules/typescript/lib/lib.es2020.sharedmemory.d.ts
-node_modules/typescript/lib/lib.es2020.string.d.ts
-node_modules/typescript/lib/lib.es2020.symbol.wellknown.d.ts
-node_modules/typescript/lib/lib.es2021.d.ts
-node_modules/typescript/lib/lib.es2021.full.d.ts
-node_modules/typescript/lib/lib.es2021.intl.d.ts
-node_modules/typescript/lib/lib.es2021.promise.d.ts
-node_modules/typescript/lib/lib.es2021.string.d.ts
-node_modules/typescript/lib/lib.es2021.weakref.d.ts
-node_modules/typescript/lib/lib.es2022.array.d.ts
-node_modules/typescript/lib/lib.es2022.d.ts
-node_modules/typescript/lib/lib.es2022.error.d.ts
-node_modules/typescript/lib/lib.es2022.full.d.ts
-node_modules/typescript/lib/lib.es2022.intl.d.ts
-node_modules/typescript/lib/lib.es2022.object.d.ts
-node_modules/typescript/lib/lib.es2022.regexp.d.ts
-node_modules/typescript/lib/lib.es2022.sharedmemory.d.ts
-node_modules/typescript/lib/lib.es2022.string.d.ts
-node_modules/typescript/lib/lib.es2023.array.d.ts
-node_modules/typescript/lib/lib.es2023.collection.d.ts
-node_modules/typescript/lib/lib.es2023.d.ts
-node_modules/typescript/lib/lib.es2023.full.d.ts
-node_modules/typescript/lib/lib.esnext.collection.d.ts
-node_modules/typescript/lib/lib.esnext.d.ts
-node_modules/typescript/lib/lib.esnext.decorators.d.ts
-node_modules/typescript/lib/lib.esnext.disposable.d.ts
-node_modules/typescript/lib/lib.esnext.full.d.ts
-node_modules/typescript/lib/lib.esnext.intl.d.ts
-node_modules/typescript/lib/lib.esnext.object.d.ts
-node_modules/typescript/lib/lib.esnext.promise.d.ts
-node_modules/typescript/lib/lib.scripthost.d.ts
-node_modules/typescript/lib/lib.webworker.asynciterable.d.ts
-node_modules/typescript/lib/lib.webworker.d.ts
-node_modules/typescript/lib/lib.webworker.importscripts.d.ts
-node_modules/typescript/lib/lib.webworker.iterable.d.ts
-node_modules/typescript/lib/tsc.js
-node_modules/typescript/lib/tsserver.js
-node_modules/typescript/lib/tsserverlibrary.d.ts
-node_modules/typescript/lib/tsserverlibrary.js
-node_modules/typescript/lib/typescript.d.ts
-node_modules/typescript/lib/typescript.js
-node_modules/typescript/lib/typesMap.json
-node_modules/typescript/lib/typingsInstaller.js
-node_modules/typescript/lib/watchGuard.js
-node_modules/typescript/lib/cs/diagnosticMessages.generated.json
-node_modules/typescript/lib/de/diagnosticMessages.generated.json
-node_modules/typescript/lib/es/diagnosticMessages.generated.json
-node_modules/typescript/lib/fr/diagnosticMessages.generated.json
-node_modules/typescript/lib/it/diagnosticMessages.generated.json
-node_modules/typescript/lib/ja/diagnosticMessages.generated.json
-node_modules/typescript/lib/ko/diagnosticMessages.generated.json
-node_modules/typescript/lib/pl/diagnosticMessages.generated.json
-node_modules/typescript/lib/pt-br/diagnosticMessages.generated.json
-node_modules/typescript/lib/ru/diagnosticMessages.generated.json
-node_modules/typescript/lib/tr/diagnosticMessages.generated.json
-node_modules/typescript/lib/zh-cn/diagnosticMessages.generated.json
-node_modules/typescript/lib/zh-tw/diagnosticMessages.generated.json
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Directory for instrumented libs generated by jscoverage/JSCover
+lib-cov
+
+# Coverage directory used by tools like istanbul
+coverage
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+# Bower dependency directory (https://bower.io/)
+bower_components
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons (https://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Snowpack dependency directory (https://snowpack.dev/)
+web_modules/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+out
+
+# Nuxt.js build / generate output
+.nuxt
+# dist  # we need this for publishing Actions
+
+# Gatsby files
+.cache/
+# Comment in the public line in if your project uses Gatsby and not Next.js
+# https://nextjs.org/blog/next-9-1#public-directory-support
+# public
+
+# vuepress build output
+.vuepress/dist
+
+# vuepress v2.x temp and cache directory
+.temp
+.cache
+
+# Docusaurus cache and generated files
+.docusaurus
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
