--- a/.github/workflows/greet.yml
+++ b/.github/workflows/greet.yml
@@ -8,5 +8,5 @@ jobs:
     name: Checks if this action works
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@latest
       - uses: ./
