--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+lib/
+
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
