--- a/.github/workflows/greet.yml
+++ b/.github/workflows/greet.yml
@@ -1,14 +1,17 @@
-name: Say Hello
+name: label pr
 
 on:
-  workflow_dispatch:
+  pull_request:
+    types: [opened, reopened]
 
 jobs:
   run-my-action:
-    name: Checks if this action works
+    name: label pr
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./
         with:
           name: 'Max'
+          gh-token: ${{ secrets.GITHUB_TOKEN }}
+          label: 'needs-review'
