--- a/action.yml
+++ b/action.yml
@@ -15,3 +15,9 @@ inputs:
     description: 'The name of the person to greet'
     required: true
     default: 'World'
+  gh-token:
+    description: 'The GitHub token for authentication.'
+    required: true
+  label:
+    description: 'The label to be applied to the pull request.'
+    required: true
