--- a/.github/workflows/greet.yml
+++ b/.github/workflows/greet.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./
         with:
-          name: 'Max'
+          name: 'Hax'
           gh-token: ${{ secrets.GITHUB_TOKEN }}
           label: 'needs-review'
