--- a/.github/workflows/greet.yml
+++ b/.github/workflows/greet.yml
@@ -1,10 +1,8 @@
 name: label pr
 
 on: 
-  workflow_dispatch:
-
-  # pull_request:
-  #   types: [opened, reopened]
+  pull_request:
+    types: [opened, reopened]
 
 jobs:
   run-my-action:
