--- a/.github/workflows/greet.yml
+++ b/.github/workflows/greet.yml
@@ -1,6 +1,6 @@
 name: label pr
 
-on: 
+on:
   pull_request:
     types: [opened, reopened]
 
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./
         with:
-          name: 'Hax'
+          name: "Hax"
           gh-token: ${{ secrets.GITHUB_TOKEN }}
-          label: 'needs-review'
+          label: "needs-review"
