--- a/action.yml
+++ b/action.yml
@@ -1,23 +1,23 @@
-name: 'My Custom Action'
-description: 'Say Hello'
-author: 'Max Cascone'
+name: "My Custom Action"
+description: "Say Hello"
+author: "Max Cascone"
 
 branding:
-  icon: 'activity'
-  color: 'green'
+  icon: "activity"
+  color: "green"
 
 runs:
-  using: 'node20'
-  main: 'dist/index.js'
+  using: "node20"
+  main: "dist/index.js"
 
 inputs:
   name:
-    description: 'The name of the person to greet'
+    description: "The name of the person to greet"
     required: true
-    default: 'World'
+    default: "World"
   gh-token:
-    description: 'The GitHub token for authentication.'
+    description: "The GitHub token for authentication."
     required: true
   label:
-    description: 'The label to be applied to the pull request.'
+    description: "The label to be applied to the pull request."
     required: true
